# Drilling_master_thesis

./: README.md
a1/meshes/: albero_hole_saw.dae  albero_hole_saw_2.dae  albero_hole_saw_3.dae  albero_short.dae  pistone.dae  pistone_2.dae  pistone_2.stl  sketch_guida-Extrude.dae
a1/urdf/: a1.urdf
a1/urdf/idyn/: a1.urdf
test/: CMakeLists.txt
test/include/: anymals_like.h  optimal.h  planning.h
test/include/towr/models/examples/: anymal_model.h
test/src/: anymals_like.cpp  optimal.cpp  planning.cpp
test/src/towr/: base_motion_constraint.cc
